--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Memory Card Game</title>
+    <title>Indigo Tree Memory Game</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <h1>Indigo Tree Memory Game</h1>
     <div id="game"></div>
     <script src="js/script.js"></script>
 </body>
