--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/snow.css">
 </head>
 
 <body>
     <h1>Indigo Tree Memory Game</h1>
     <div id="game"></div>
+    <div class="snowing">
+        <div class="snow snow--near"></div>
+        <div class="snow snow--near snow--alt"></div>
+        <div class="snow snow--mid"></div>
+        <div class="snow snow--mid snow--alt"></div>
+        <div class="snow snow--far"></div>
+        <div class="snow snow--far snow--alt"></div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
