--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Indigo Tree Memory Game</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/snow.css">
 </head>
@@ -21,9 +21,9 @@
 <!-- $$ |\$  /$$ |$$   ____|$$ |      $$ |      $$ |  $$ |      $$  /\$$\ $$ | $$ | $$ |$$  __$$ | \____$$\  -->
 <!-- $$ | \_/ $$ |\$$$$$$$\ $$ |      $$ |      \$$$$$$$ |      $$ /  $$ |$$ | $$ | $$ |\$$$$$$$ |$$$$$$$  | -->
 <!-- \__|     \__| \_______|\__|      \__|       \____$$ |      \__|  \__|\__| \__| \__| \_______|\_______/  -->
-                                           <!-- $$\   $$ |                                                   -->
-                                           <!-- \$$$$$$  |                                                   -->
-                                            <!-- \______/                                                    -->
+<!-- $$\   $$ |                                                   -->
+<!-- \$$$$$$  |                                                   -->
+<!-- \______/                                                    -->
 
 <body>
     <h1>Indigo Tree Memory Game</h1>
