Add footer link to code and credits

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div class="snow snow--far"></div>
         <div class="snow snow--far snow--alt"></div>
     </div>
+    <footer class="footer">
+        <a href="https://github.com/eugelogic/memory-card-game" target="_blank" rel="noopener">🤓 Code & Credits 👍</a>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
