--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Donut Memory Game</title>
+    <title>Donuts Memory Game</title>
 
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -26,7 +26,7 @@
 <!-- \______/                                                    -->
 
 <body>
-    <h1>Donut Memory Game</h1>
+    <h1>Donuts Memory Game</h1>
     <div id="game"></div>
     <div class="snowing">
         <div class="snow snow--near"></div>
