--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="snow snow--far snow--alt"></div>
     </div>
     <footer class="footer">
-        <a href="https://github.com/eugelogic/memory-card-game" target="_blank" rel="noopener">🤓 Code & Credits 👍</a>
+        <p>🤓 <a href="https://github.com/eugelogic/memory-card-game" target="_blank" rel="noopener">Code & Credits</a>
+            👍</p>
     </footer>
     <script src="js/script.js"></script>
 </body>
